deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-application
  template:
    metadata:
      labels:
        app: simple-application
    spec:
      containers:
        - name: ingress-container
          image: mayank7890/ingressimg
          ports:
            - containerPort: 8000
