service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
spec:
  selector:
    app: simple-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
