ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: mayanklakhina
      http:
        paths:
          - path: /public
            pathType: Prefix
            backend:
              service:
                name: ingress-service
                port:
                  number: 80
